# sproc

./: .coveragerc  .gitignore  .travis.yml  404.html  CHANGELIST  README.md  README.rst  doc_sproc.py  doc_subprocessor.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_subprocess.py  setup.py  sproc.py  subprocessor.py  test_requirements.txt  test_sproc.py  test_subprocessor.py
.github/workflows/: python-package.yml
docs/: index.md
sproc/: __init__.py
test/: test_import_all.py  test_run.py  test_subprocessor.py
