[tool.poetry]
name = "sproc"
version = "2.4.1"
description = "⛏ Subprocesseses for subhumanses ⛏"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rec/sproc"
homepage = "https://github.com/rec/sproc"
documentation = "https://rec.github.io/sproc"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
coverage = "*"
pytest = "*"
mkdocs = "*"
mypy = "*"
ruff = "*"
pytest-benchmark = "^4.0.0"
readme-renderer = "*"


[tool.coverage]
[tool.coverage.run]
branch = true
source = ["sproc"]

[tool.coverage.report]
fail_under = 81
skip_covered = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
