[project]
name = "sproc"
version = "2.4.1"
description = "⛏ Subprocesseses for subhumanses ⛏"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/rec/sproc"
Repository = "https://github.com/rec/sproc"
Documentation = "https://rec.github.io/sproc"

[dependency-groups]
dev = [
    "coverage",
    "pytest",
    "mkdocs",
    "ruff",
    "pytest-benchmark>=4.0.0,<5",
    "readme-renderer",
    "pyupgrade>=3.21.2",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
[tool.coverage.run]
branch = true
source = ["sproc"]

[tool.coverage.report]
fail_under = 81
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
strict = true
